# enki-integration-hass

./: .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml  renovate.json  requirements-dev.txt
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  device_telemetry.yml  feature_request.yml
.github/workflows/: ci.yml  publish-release.yml  release.yml  stale.yml  telemetry-report.yml  validate.yml
custom_components/enki/: __init__.py  api.py  auth.py  binary_sensor.py  button.py  capabilities.py  climate.py  config_flow.py  const.py  coordinator.py  cover.py  device_profile.py  device_state.py  diagnostics.py  entity.py  exceptions.py  fan.py  fan_helpers.py  fan_rotation_helpers.py  gateway_keys_data.py  helpers.py  http_client.py  light.py  light_base.py  manifest.json  migration.py  models.py  notifications.py  number.py  select.py  sensor.py  strings.json  switch.py  telemetry.py  telemetry_nudge.py
docs/: API.md  BETA_VOLETS_KEY.md  DEVELOPMENT.md  HACS.md  MIGRATION.md  PR_GDANSK_BLE_DRAFT.md  ROADMAP.md  SUPPORTED_DEVICES.md  TELEMETRY.md
docs/devices/: README.md
scripts/: discover_devices.py  enki_bootstrap.py  extract_api_routes.py  extract_gateway_keys.py  fetch_gateway_keys.py  github_labels.py  sync_github_labels.sh  sync_telemetry_labels.sh  validate_gateway_keys.py
tests/: conftest.py
tests/integration/: test_live_api.py
tests/unit/: test_api_auth.py  test_api_routing.py  test_consumption.py  (+43 more)
(+33 files in other folders)
